update UserServiceImpl: now it uses new role model